force-app/main/default/objects/Credential_Exam_Attempt__c/Credential_Exam_Attempt__c.object-meta.xml
<CustomObject>
    <label>Credential Exam Attempt</label>
    <nameField>
        <displayFormat>EXAM-{00000}</displayFormat>
        <label>Credential Exam Attempt ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Credential Exam Attempts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>