force-app/main/default/objects/Credential_Exam_Attempt__c/fields/Credential__c.field-meta.xml
<CustomField>
    <fullName>Credential__c</fullName>
    <formula>User_Credential__r.Credential__r.Name</formula>
    <label>Credential</label>
    <type>Text</type>
</CustomField>