force-app/main/default/objects/Credential_Exam_Attempt__c/fields/Exam_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Exam_Date_Time__c</fullName>
    <label>Exam Date Time</label>
    <type>DateTime</type>
</CustomField>