force-app/main/default/objects/Credential_Exam_Attempt__c/fields/Exam_Voucher__c.field-meta.xml
<CustomField>
    <fullName>Exam_Voucher__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Exam Voucher</label>
    <referenceTo>Exam_Voucher__c</referenceTo>
    <relationshipLabel>Credential Exam Attempts</relationshipLabel>
    <relationshipName>Credential_Exam_Attempts</relationshipName>
    <type>Lookup</type>
</CustomField>