force-app/main/default/objects/Credential_Exam_Attempt__c/fields/Fail_Scorecard__c.field-meta.xml
<CustomField>
    <fullName>Fail_Scorecard__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Fail Scorecard</label>
    <type>Checkbox</type>
</CustomField>