force-app/main/default/objects/Credential_Exam_Attempt__c/fields/Pass_Certificate__c.field-meta.xml
<CustomField>
    <fullName>Pass_Certificate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pass Certificate</label>
    <type>Checkbox</type>
</CustomField>