force-app/main/default/objects/Credential_Exam_Attempt__c/fields/Preparation_Comments__c.field-meta.xml
<CustomField>
    <fullName>Preparation_Comments__c</fullName>
    <label>Preparation Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>