force-app/main/default/objects/Credential_Exam_Attempt__c/fields/Proof_of_Preparation__c.field-meta.xml
<CustomField>
    <fullName>Proof_of_Preparation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Proof of Preparation</label>
    <type>Checkbox</type>
</CustomField>