force-app/main/default/objects/Credential_Exam_Attempt__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Voucher Requested</fullName>
            </value>
            <value>
                <fullName>Voucher Approved</fullName>
            </value>
            <value>
                <fullName>Voucher Declined</fullName>
            </value>
            <value>
                <fullName>Voucher Assigned</fullName>
            </value>
            <value>
                <fullName>Exam Scheduled</fullName>
            </value>
            <value>
                <fullName>Exam Passed</fullName>
            </value>
            <value>
                <fullName>Exam Failed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>