force-app/main/default/objects/Credential_Exam_Attempt__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <formula>User_Credential__r.User__r.FirstName + &quot; &quot; +  User_Credential__r.User__r.LastName</formula>
    <label>User</label>
    <type>Text</type>
</CustomField>