force-app/main/default/objects/Credential_Exam_Attempt__c/fields/User_Credential__c.field-meta.xml
<CustomField>
    <fullName>User_Credential__c</fullName>
    <label>User Credential</label>
    <referenceTo>User_Credential__c</referenceTo>
    <relationshipLabel>Credential Exam Attempts</relationshipLabel>
    <relationshipName>Credential_Exam_Attempts</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>