force-app/main/default/objects/Credential_Exam_Attempt__c/fields/Voucher_Sponsor__c.field-meta.xml
<CustomField>
    <fullName>Voucher_Sponsor__c</fullName>
    <label>Voucher Sponsor</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ness</fullName>
            </value>
            <value>
                <fullName>Salesforce</fullName>
            </value>
            <value>
                <fullName>Candidate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>