force-app/main/default/objects/Credential_Exam_Attempt__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>User_Credential__c</columns>
    <columns>User__c</columns>
    <columns>Credential__c</columns>
    <columns>Exam_Date_Time__c</columns>
    <columns>Status__c</columns>
    <columns>Exam_Voucher__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>